@@ -1,3 +1,9 @@
+2005-04-15  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* load.c: (create_mixer_collection): Leak fixes
+	* preferences.c: (gnome_volume_applet_preferences_change),
+	(cb_track_select): Leak fixes. Closes bug #300718.
+
 2005-04-03  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
 	* applet.c: (gnome_volume_applet_toggle_mute),
